--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             font-weight: bold;
         }
         h1 {
+            padding: 2rem;
             font-size: 3rem;
             color: #e74c3c;
             margin-bottom: 0;
@@ -110,6 +111,7 @@
         #score, #time, #difficulty {
             font-size: 1.2rem;
             margin-bottom: 0.5rem;
+            padding: 0.2rem;
         }
         button, select, input {
             padding: 10px 20px;
@@ -155,7 +157,7 @@
 </head>
 <body>
     <div class="error-container">
-        <h1>404</h1>
+        <h1>404.html</h1>
         <p>Lo sentimos, la página que buscas no se encuentra.</p>
         <p>Mientras tanto, ¿por qué no juegas "Atrapa el Logo"?</p>
     </div>
